fix: change the visibility of the read status

--- a/fun-chat/src/components/chat/message/message.scss
+++ b/fun-chat/src/components/chat/message/message.scss
@@ -53,3 +53,8 @@
     justify-content: space-between;
   }
 }
+.message-wrapper:not(.message-wrapper_myself) {
+  .message__status-read {
+    display: none;
+  }
+}
